<resources>
    <string name="app_name">RestaurantSpain</string>
    <string name="shop">Shop</string>
    <string name="all_productos">All Productos</string>
    <string name="oferta">Oferta</string>
    <string name="achievements">Achievements</string>
    <string name="confirm_informations">Confirm Informations</string>
    <string name="are_you_sure">are you sure ?</string>
    <string name="you_will_lose_all_data_that_you_wrote_it_if_you_not_sure_put_to_back">you will lose all data that you wrote it, if you not sure put to back</string>
    <string name="back">back</string>
    <string name="spain">Spain</string>
    <string name="madrid">Madrid</string>
    <string name="_322515">+322515</string>
    <string name="jesus">jesus</string>
    <string name="jesus_gmail_com">jesus@gmail.com</string>
    <string name="payments">Payments</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="total_cost"> <u>Total cost</u></string>
    <string name="_47_30">47.30$</string>
    <string name="submite">Submite</string>
    <string name="input_coupon">input coupon</string>
    <string name="visa_master_card">Visa - Master Card</string>
    <string name="google_pay">Google pay</string>
    <string name="name_on_card">name on card</string>
    <string name="your_name">your name</string>
    <string name="card_number">card number</string>
    <string name="_0000_0000_0000_0000" translatable="false">0000 0000 0000 0000</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cvc_code">CVC code</string>
    <string name="cvc">CVC</string>
    <string name="pay_now">Pagar ahora</string>
    <string name="envie_standar">Envie standar</string>
    <string name="shipping_infromation">Shipping Infromation</string>
    <string name="search_by_coffee">Search by Coffee</string>
    <string name="tostador">Tostador</string>
    <string name="sca">SCA</string>
    <string name="altitud">Altitud</string>
    <string name="quantity">Quantity</string>
    <string name="product_details">Product Details</string>
    <string name="pay_all_now">Pay All Now</string>
    <string name="select_address">select address</string>
    <string name="nueva_offerta">NUEVA OFFERTA</string>
    <string name="ver_ficha">ver ficha</string>
    <string name="orders">Orders</string>
    <string name="cerrer_sesion">Cerrer Sesion</string>
    <string name="change_image">change image</string>
    <string name="tu_cuenta">Tu cuenta</string>
    <string name="arrow">arrow</string>
    <string name="qr">QR</string>
    <string name="offers">Offers</string>
    <string name="achievement">Achievement</string>
    <string name="logros">Logros</string>
    <string name="for_the_love_nof_coffee">for the love \nof coffee</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="activaci_n">Activación</string>
    <string name="el_c_digo_de_activaci_n_fue_enviado_al_correo_electr_nico">El código de activación fue enviado al correo electrónico</string>
    <string name="log_in">Log In</string>
    <string name="has_olvidado_tu_contrase_a"><u>Has olvidado tu contraseña?</u></string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="verificar">Verificar</string>
    <string name="la_contrase_a_fue_creada">La contraseña fue creada</string>
    <string name="exitosamente">Exitosamente!</string>
    <string name="terminado">Terminado</string>
    <string name="scascore">SCA: %s</string>
    <string name="level_1">Nivel 1</string>
    <string name="stamp">Stamp your passport and we invite you to the following coffee</string>
    <string name="Level_1_achievement_1">-Sign up to take advantage of the offers</string>
    <string name="go">Go!</string>
    <string name="level_2">Nivel 2</string>
    <string name="level_2_achievement_1">-Stamp your passport in an establishment for the first time</string>
    <string name="level_2_achievement_2">-Redeem your first offer</string>
    <string name="level_2_achievement_3">-Make your first assessment</string>
    <string name="level_2_achievement_4">-Follow us on instagram</string>
    <string name="level_2_achievement_5">-Recommend the app to a friend</string>
    <string name="level_2_achievement_6">-Accumulate 500 points</string>
    <string name="level_2_achievement_7">-Make your first online purchase</string>
    <string name="level_2_achievement_8">-Haz una compra online a un establecimiento que NO hayas visitado</string>
    <string name="level_2_achievement_9">-Make an online purchase from a store you\'ve visited</string>
    <string name="level_2_achievement_10">-Make a purchase over 35€</string>
    <string name="level_2_achievement_11">-Make three different purchases over €15</string>
    <string name="level_2_achievement_12">-Visit or shop at 3 different establishments</string>
    <string name="level_3">Nivel 3</string>
    <string name="level_3_achievement_1">-Stamp your passport 30 times in a store</string>
    <string name="level_3_achievement_2">-Redeem 10 offers</string>
    <string name="level_3_achievement_3">-Rate 5 products or roasters</string>
    <string name="level_3_achievement_4">-Recommend the app to 5 friends</string>
    <string name="level_3_achievement_5">-Accumulate 2000 points</string>
    <string name="level_3_achievement_6">-Accumulate more than 500 points in 1 month</string>
    <string name="level_3_achievement_7">-Make 5 online purchases</string>
    <string name="level_3_achievement_8">-Subscribe to a roaster</string>
    <string name="level_3_achievement_9">-Make a purchase over €55</string>
    <string name="level_3_achievement_10">-Make three different purchases over €35</string>
    <string name="level_3_achievement_11">-Visit or shop at 10 different locations</string>
    <string name="checkedmark">\u2713</string>
    <string name="storage_permission_denied">You have to enable storage permission to use storage</string>
    <string name="empecemos">Empecemos!</string>
    <string name="rellena_tus_datos_para_crear_nuna_cuenta">Rellena tus datos para crear \nuna cuenta.</string>
    <string name="rellena_tus_datos_para_iniciar_sesion">Rellena tus datos para iniciar \nsesión.</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="ingresa_tu_correo_electr_nico_para_enviar_en_c_digo_otp">Ingresa tu correo electrónico \n para enviar en código OTP.</string>
    <string name="enviar">Enviar</string>
    <string name="el_c_digo_otp_fue_enviado_n_al_correo_electr_nico_dserrano_yebala_org">El código OTP fue enviado \n al correo electrónico dserrano@yebala.org</string>
    <string name="confirma_tu_contrase_a">Confirma tu contraseña</string>
    <string name="bien">Bien!</string>
    <string name="la_contrase_a_fue_creada_nexitosamente">La contraseña fue creada\nexitosamente.</string>
    <string name="registrarse">Registrarse</string>
    <string name="para_ti">Para ti</string>
    <string name="todos_los_productos">Todos los productos</string>
    <string name="buscar">Buscar</string>
    <string name="buscar_por_tipo_de_caf">Buscar por tipo de café</string>
    <string name="estado_de_tu_pedido">Estado de tu pedido</string>
    <string name="a_ade_aqu_una_nota">Añade aquí una nota....</string>
    <string name="planes">Planes</string>
    <string name="selecciona_tipo_de_entrega">Selecciona tipo de entrega</string>
    <string name="entrega_peri_dica">Entrega periódica</string>
    <string name="precio">Precio</string>
    <string name="modificar">Modificar</string>
    <string name="direcci_n_de_facturaci_n">Dirección de facturación</string>
    <string name="Recuperar_contraseña">Recuperar\ncontraseña</string>
    <string name="_1">1</string>
    <string name="start_from">Empieza desde</string>
    <string name="equal">=</string>
    <string name="subscribe">Suscribirse</string>
    <string name="no_back">No, Back</string>
    <string name="yes_go">Yes, Go</string>
    <string name="yes_cancel">Yes, Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="level2_closed">Nivel 2 \ncerrado!</string>
    <string name="level3_closed">Nivel 3 \ncerrado!</string>
    <string name="complete_previous_level">Completa el nivel anterior para \ndesbloquear el nivel.</string>
    <string name="cancel_plan_yes_or_no">Estás seguro de que quieres \ncancelar este plan?.</string>
    <string name="return_back">Volver</string>
    <string name="finish">Terminar</string>
    <string name="hecho">Hecho!</string>
    <string name="payment_made_successfully">El pago se ha realizado \ncorrectamente.</string>
    <string name="continue_buying">Continuar comprando</string>
    <string name="make_order">Realizar pedido</string>
    <string name="Did_you_not_receive_OTP_Resend">Didn’t receive OTP ? Resend</string>
    <string name="Fill_in_your_new_password">Rellena tu nueva contraseña, \n recuerda que debe ser distinta \n a la anterior.</string>
    <string name="restore_password">Restablecer contraseña</string>
    <string name="user_repetition_placeholder">%1$s/%2$s</string>
    <string name="level_1_actual">Nivel 1 (Nivel actual)</string>
    <string name="level_2_actual">Nivel 2 (Nivel actual)</string>
    <string name="level_3_actual">Nivel 3 (Nivel actual)</string>
    <string name="nivel3_tasks">Nivel 3 (%1$s de 11 tareas)</string>
    <string name="nivel2_tasks">Nivel 2 (%1$s de 12 tareas)</string>
    <string name="your_orders">Tus pedidos</string>
    <string name="factura">Factura</string>
    <string name="make_factura">Emitir factura</string>
    <string name="estado">Estado</string>
    <string name="productor">Productor</string>
    <string name="producto">Producto</string>
    <string name="shipping">Envío</string>
    <string name="total_with_taxes">Total (I.V.A incluido)</string>
    <string name="receipt_id">Receipt ID:</string>
    <string name="total_cost_placeholder">%s %s</string>
    <string name="products_in_order">Productos en orden</string>
    <string name="product_rating">Calificación del producto</string>
    <string name="weight_placeholder">%s g</string>
    <string name="package_count_placeholder">x%s package</string>
    <string name="user_data">Datos de usuario</string>
    <string name="old_password">Contraseña anterior</string>
    <string name="rating">rating</string>
    <string name="price_asc">price asc</string>
    <string name="price_des">price des</string>
    <string name="sort">Sort</string>
    <string name="nombre_del_plan">Nombre del plan</string>
    <string name="mismo_tostador">Mismo tostador</string>
    <string name="otro_tostador">Otro tostador</string>
    <string name="continuar">Continuar</string>
    <string-array name="sizes">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>
    <string name="periodicity">Periodicity</string>
    <string name="menu">Menu</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="i_don_t_have_account">I Don\'t Have Account</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="enter_user_name">Enter user name</string>
    <string name="email_address">Email address</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="role">Role</string>
    <string name="add_employee">Add employee</string>
    <string name="create_employee">Create Employee</string>
</resources>