<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/alert_dialog_change"
    android:padding="16dp"
    android:background="@drawable/bg_salmon_a50_r30">

    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/dark_brown"
        android:text="@string/nombre_del_plan"
        android:layout_gravity="start"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="14dp"
            android:layout_gravity="center"
            android:text="@string/mismo_tostador"
            android:textSize="15sp"
            android:background="@drawable/bg_white_r30"
            android:textColor="@color/dark_brown"
            android:buttonTint="@color/blue"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="14dp"
            android:layout_gravity="center"
            android:text="@string/otro_tostador"
            android:textSize="15sp"
            android:background="@drawable/bg_white_r30"
            android:textColor="@color/dark_brown"
            android:buttonTint="@color/blue"/>
    </RadioGroup>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:minWidth="140dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="15dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/cancel"
        android:textColor="@color/beige"
        android:background="@drawable/bg_brown_r30"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:minWidth="140dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="15dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/continuar"
        android:background="@drawable/bg_blue_r30"
        android:textColor="@color/dark_brown"
        style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
