<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".feature.subscriptions.SortingInSubscriptionFragment">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_salmon_r30"
                    android:buttonTint="@color/blue"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:text="@string/rating"
                    android:textColor="@color/dark_brown" />

                <RadioButton
                    android:id="@+id/sizes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_salmon_r30"
                    android:buttonTint="@color/blue"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:text="@string/sizes"
                    android:textColor="@color/dark_brown" />



                <RadioButton
                    android:id="@+id/price_asc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_salmon_r30"
                    android:buttonTint="@color/blue"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:text="@string/price_asc"
                    android:textColor="@color/dark_brown" />

                <RadioButton
                    android:id="@+id/price_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_salmon_r30"
                    android:buttonTint="@color/blue"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:text="@string/price_des"
                    android:textColor="@color/dark_brown" />

                <RadioButton
                    android:id="@+id/periodicity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_salmon_r30"
                    android:buttonTint="@color/blue"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:text="@string/periodicity"
                    android:textColor="@color/dark_brown" />

            </RadioGroup>


            <TextView
                android:id="@+id/confirm_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="20dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/bg_brown_r50"
                android:gravity="center"
                android:minHeight="50dp"
                android:text="@string/sort"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>