<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/blue"
    tools:context=".feature.auth.AuthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/rovle_logolpink"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="-30dp"
            android:layout_weight="1"
            android:fontFamily="@font/chaumont_scriptbeta_regular"
            android:gravity="center_horizontal"
            android:text="@string/for_the_love_nof_coffee"
            android:textColor="@color/dark_brown"
            android:textSize="50sp" />


        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/bg_login_r30"
            android:gravity="center"
            android:minHeight="60dp"
            android:text="@string/iniciar_sesi_n"
            android:textAllCaps="false"
            android:textColor="@color/dark_brown"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/bg_brown_btn"
            android:gravity="center"
            android:minHeight="60dp"
            android:text="@string/registrarse"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
